<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="4"
    android:rowCount="5"
    tools:context=".calc_buttons">

    <Button
        android:id="@+id/btn_clear"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/btn_clear" />

    <Button
        android:id="@+id/btn_percentage"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/btn_percentage" />

    <Button
        android:id="@+id/btn_division"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/btn_division" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/btn_multiply" />

    <Button
        android:id="@+id/btn_7"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/btn_seven" />

    <Button
        android:id="@+id/btn_8"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/btn_eight" />

    <Button
        android:id="@+id/btn_9"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/btn_nine" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/functionButtons"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/btn_minus" />

    <Button
        android:id="@+id/btn_4"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/btn_four" />

    <Button
        android:id="@+id/btn_5"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/btn_five" />

    <Button
        android:id="@+id/btn_6"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/btn_six" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/functionButtons"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/btn_plus" />

    <Button
        android:id="@+id/btn_1"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/btn_one" />

    <Button
        android:id="@+id/btn_2"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/btn_two" />

    <Button
        android:id="@+id/btn_3"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/btn_three" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/equalButtons"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_gravity="fill_vertical"
        android:layout_rowSpan="2"
        android:text="@string/btn_equal" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/btn_dot" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/btn_zero" />

    <Button
        android:id="@+id/btn_double_zero"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/btn_double_zero" />

</GridLayout>